# marketAna

./: .env.example  .gitignore  README.md  dev_proxy.md  main.py  package-lock.json  package.json  par_plan.md  plan.md  pyproject.toml
back_end/: __init__.py
back_end/app/: main.py
data_proccessing/: __init__.py  cleaning.py  config.py  models.py
data_proccessing/catalog/: __init__.py  matcher.py
data_proccessing/llm/: __init__.py  client.py  context.py  parser.py
docs/: api_mock.md  database_schema.md
front_end/: README.md  package-lock.json  package.json
plan_details/: p1_init.md  p2_db_conditranfer_design.md  p3_scheduler.md  p4_parser.md  p5_cleaner.md  p9_APIMock.md
pn03/: README.md  __init__.py  models.py  scheduler.py  test_scheduler.py
pn04/: README.md  __init__.py  exceptions.py  html_parser.py  image_parser.py  models.py  parser.py  pdf_parser.py  requirements.txt  table_utils.py  test_parser.py
pn05/: README.md  __init__.py  cleaner.py  models.py  noise_rules.py  normalizer.py  structured_cleaner.py  test_cleaner.py
pn06/: README.md  __init__.py  confidence.py  direction_rules.py  models.py  product_dict.py  rule_engine.py  test_rule_engine.py
pn07/: README.md  __init__.py  json_parser.py  llm_client.py  llm_infer.py  models.py  prompt_builder.py  test_llm_infer.py
pn11/: README.md  __init__.py  batch.py  models.py  pipeline.py  test_pipeline.py
scripts/: ingest_files.py  init_db.py  migrate_manual_review_20260713.sql
tests/: manual_single_file_pipeline.py  readme.md  test_backend_data.py  test_core.py  test_manual_review.py
(+46 files in other folders)
