[project]
name = "marketana"
version = "0.1.0"
description = "Market article analysis pipeline skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0,<0.116.0",
    "httpx>=0.27.0,<0.28.0",
    "pydantic-settings>=2.6.0",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
